# ai-daily-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  subscribers.txt
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: subscribe.yml
.github/workflows/: agent_publish_manual.yml  daily_run.yml  health_check.yml  subscribe.yml  test.yml
agent/: __init__.py  cli.py  schemas.py
agent/agents/: __init__.py  collector.py  critic.py  curator.py  event_clusterer.py  event_scorer.py  final_selector.py  gitblog_verifier.py  history_checker.py  issue_publisher.py  llm_reranker.py  publisher.py  repairer.py  research_editor.py  section_classifier.py  semantic_duplicate_critic.py  source_diffuser.py  source_discoverer.py  (+4 more)
artifacts/: juya84.json
docs/: CHANGELOG.md  TECHNICAL.md  smoke_test_guide.md  smoke_test_report.template.md
tests/: conftest.py  test_cli_eval.py  test_critic_rejects_invalid_draft.py  test_curated_artifact.py  test_curator_scoring.py  test_deepseek_config_validation.py  test_evidence_fetcher.py  test_freshness_gate.py  test_gitblog_verifier.py  test_issue_publisher.py  test_llm_provider_mock.py  test_llm_reranker.py  test_pipeline_mock_run.py  test_pricing_snapshot.py  test_repair_loop.py  test_research_editor.py  test_rss_adapter.py  test_semantic_duplicate_critic.py  test_sitemap_source.py  test_source_diffuser.py  test_source_discoverer.py  test_source_resolver.py  test_source_scout.py  test_tool_registry.py  test_trace_written.py  test_trends.py  test_writer_output_schema.py
(+72 files in other folders)
