[project]
name = "report-agent"
version = "0.1.0"
description = "AI Tech Intelligence Agent Harness — upstream content pipeline for juya-ai-daily gitblog."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "feedparser>=6.0",
    "httpx>=0.27",
    "openai>=1.40",
    "jsonschema>=4.21",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent*"]
exclude = ["tests*", "_ref*", "artifacts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
